rename afleveradres naar leveradres update extension om total bedrag via site te zetten (wegens verandering TAX in backend)

--- a/KoketSite/app/locale/nl_NL/IWD_Opc.csv
+++ b/KoketSite/app/locale/nl_NL/IWD_Opc.csv
@@ -204,8 +204,8 @@
 "Please agree to all Terms and Conditions before placing the orders.","Gelieve in te stemmen met de Algemene Voorwaarden voor het plaatsen van de bestellingen."
 "Please agree to all the terms and conditions before placing the order.","Gelieve in te stemmen met de algemene voorwaarden voor het plaatsen van de bestelling."
 "Please check billing address information.","Gelieve de facturatieadresgegevens te controleren."
-"Please check shipping address information.","Gelieve de gegevens van het afleveradres te controleren."
-"Please check shipping addresses information.","Gelieve de gegevens van het afleveradres te controleren."
+"Please check shipping address information.","Gelieve de gegevens van hetleveradres te controleren."
+"Please check shipping addresses information.","Gelieve de gegevens van hetleveradres te controleren."
 "Please choose to register or to checkout as a guest","Registreer of check uit als gast a.u.b."
 "Please log in below:","Gelieve hieronder aanmelden:"
 "Please select region, state or province","Selecteer alstublieft regio, staat of provincie"
@@ -328,7 +328,7 @@
 "Your billing agreement # is: %s.","Je factureringsovereenkomst # is: %s."
 "Your order # is: %s.","Je bestelnummer is: %s."
 "Your order cannot be completed at this time as there is no payment methods available for it.","Je bestelling kan nu niet worden afgerond omdat er geen betaalmethoden beschikbaar zijn."
-"Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Je bestelling kan nu niet worden afgerond omdat er geen verzendmethoden beschikbaar zijn. Maak de noodzakelijke veranderingen je in afleveradres."
+"Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Je bestelling kan nu niet worden afgerond omdat er geen verzendmethoden beschikbaar zijn. Maak de noodzakelijke veranderingen je inleveradres."
 "Your order has been received.","Je bestelling is goed ontvangen."
 "Your order number is ","je bestelnummer is"
 "Your recurring payment profiles:","je herbruikbare betalingsprofielen:"
