--- a/KoketSite/app/locale/nl_NL/Mage_Adminhtml.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Adminhtml.csv
@@ -763,10 +763,10 @@
 "Shipment was successfully created.","Verzending is met succes aangemaakt."
 "Shipment was successfully sent.","Verzending is met succes verstuurd."
 "Shipping","Verzending"
-"Shipping Address","Afleveradres"
+"Shipping Address","Leveradres"
 "Shipping Price","Verzendkosten"
-"Shipping address","Afleveradres"
-"Shipping address selection is not applicable","Keuze van afleveradres is niet toepasbaar"
+"Shipping address","Leveradres"
+"Shipping address selection is not applicable","Keuze vanleveradres is niet toepasbaar"
 "Shipping method must be specified","Verzendwijze moet worden aangegeven"
 "Shipping method selection is not applicable","Gekozen verzendwijze is niet toepasbaar"
 "Shipping origin","Plaats van verzending"
