--- a/KoketSite/app/locale/nl_NL/Mage_Api.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Api.csv
@@ -256,8 +256,8 @@
 "Select date","Datum selecteren"
 "Shipment Comments","Notities verzending"
 "Shipment History","Levering Geschiedenis"
-"Shipping Address","Afleveradres"
-"Shipping address selection is not applicable","Keuze van afleveradres is niet toepasbaar"
+"Shipping Address","Leveradres"
+"Shipping address selection is not applicable","Keuze vanleveradres is niet toepasbaar"
 "Shipping method selection is not applicable","Gekozen verzendwijze is niet toepasbaar"
 "Show Report for","Rapport tonen voor"
 "Show by","Tonen op"
