--- a/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
@@ -17,7 +17,7 @@
 "Apply Coupon","Kortingsbon gebruiken"
 "Are you sure you would like to remove this item from the shopping cart?","Weet je zeker dat je dit artikel wil verwijderen uit je winkelmandje?"
 "Back","Terug"
-"Back to Shipping Information","Terug naar afleveradres"
+"Back to Shipping Information","Terug naarleveradres"
 "Based on your selection, you may be interested in the following items:","Gebaseerd op je selectie, ben je wellicht ook geïnteresseerd in de volgende producten:"
 "Billing Address","Factuuradres"
 "Billing Information","Betaalgegevens"
@@ -58,13 +58,13 @@
 "Continue Shopping","Ga verder met winkelen"
 "Continue to Billing Information","Ga verder naar factuuradres"
 "Continue to Review Your Order","Ga verder met het bekijken van uw bestelling"
-"Continue to Shipping Information","Ga verder naar afleveradres"
+"Continue to Shipping Information","Ga verder naarleveradres"
 "Country","Land"
 "Coupon code ""%s"" is not valid.","Kortingscode “%s” is niet geldig."
 "Coupon code ""%s"" was applied successfully.","Kortingscode was succesvol toegepast."
 "Coupon code was canceled successfully.","Kortingscode is geannuleerd."
 "Create Billing Address","Factuuradres aanmaken"
-"Create Shipping Address","Afleveradres aanmaken"
+"Create Shipping Address","Leveradres aanmaken"
 "Data saving problem","Probleem bij het opslaan van gegevens"
 "Default Billing","Standaard-betaling"
 "Default Shipping","Standaard-verzending"
@@ -77,12 +77,12 @@
 "Display Shopping Cart Sidebar","Zijbalk winkelmandje tonen"
 "Display item quantities","Artikel-aantallen tonen"
 "Display number of items in cart","Aantal artikelen in winkelmandje tonen"
-"Easy access to your order history and status","Extra mogelijkheden: verlanglijst (bookmarks), meerdere afleveradressen, tags, reviews, etc."
+"Easy access to your order history and status","Extra mogelijkheden: verlanglijst (bookmarks), meerdereleveradressen, tags, reviews, etc."
 "Edit","Wijzigen"
 "Edit Address","Adres bewerken"
 "Edit Billing Address","Factuuradres bewerken"
 "Edit Items","Artikelen bewerken"
-"Edit Shipping Address","Afleveradres bewerken"
+"Edit Shipping Address","Leveradres bewerken"
 "Edit Terms and Conditions","Algemene Voorwaarden bewerken"
 "Edit Your Cart","Ga terug naar uw winkelmandje"
 "Email Address","E-mailadres"
@@ -142,7 +142,7 @@
 "Please enter a valid zip code. For example 90602 or 90602-1234.","Voer een geldige postcode in a.u.b. Bijvoorbeeld: 2000 of 6621BK"
 "Please log in below:","U kunt hieronder inloggen met je e-mail adres en wachtwoord."
 "Please select region, state or province","Selecteer een gebied, staat of provincie a.u.b."
-"Please select shipping address for applicable items","Selecteer een afleveradres voor de betreffende artikelen a.u.b."
+"Please select shipping address for applicable items","Selecteer eenleveradres voor de betreffende artikelen a.u.b."
 "Please select shipping methods for all addresses","Selecteer verzendwijzen voor alle adressen a.u.b."
 "Price","Prijs"
 "Proceed to Checkout","Ga door naar afrekenen"
@@ -170,14 +170,14 @@
 "Select Shipping Method","Verzendwijze selecteren"
 "Select State/Province...","Provincie selecteren"
 "Select a billing address from your address book or enter a new address.","Selecteer een factuuradres uit je adresboek of voer een nieuw adres in."
-"Select a shipping address from your address book or enter a new address.","Selecteer een afleveradres uit je adresboek of voer een nieuw adres in."
+"Select a shipping address from your address book or enter a new address.","Selecteer eenleveradres uit je adresboek of voer een nieuw adres in."
 "Send Payment Failed Email Copy Method","CC-methode van E-mail over mislukte betaling"
 "Send Payment Failed Email Copy To","Van een E-mail over mislukte betaling een CC sturen aan"
 "Send to","Verzend naar"
 "Ship to Multiple Addresses","Naar verschillende adressen verzenden"
 "Ship to different address","Naar ander adres verzenden"
 "Ship to this address","Naar dit adres verzenden"
-"Shipping Address","Afleveradres"
+"Shipping Address","Leveradres"
 "Shipping Information","Verzendgegevens"
 "Shipping Method","Verzendwijze"
 "Shipping Methods","Verzendwijzen"
