--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -90,12 +90,12 @@
 "Date of Birth is required.","Geboortedatum is verplicht"
 "Day","Dag"
 "Days in Wishlist","Dagen op verlanglijst"
-"Default Addresses","Standaard-adressen"
-"Default Billing Address","Standaard-factuuradres"
+"Default Addresses","Standaard adressen"
+"Default Billing Address","Standaard factuuradres"
 "Default Email Domain","Standaard e-maildomein"
 "Default Group","Standaardgroep"
-"Default Shipping Address","Standaard-leveringsadres"
-"Default Welcome Email","Standaard welkomst-mail"
+"Default Shipping Address","Standaard leveringsadres"
+"Default Welcome Email","Standaard welkomstmail"
 "Delete","Verwijder"
 "Delete Address","Adres verwijderen"
 "Delete Customer","Klant verwijderen"
@@ -258,7 +258,7 @@
 "Prefix dropdown options","Dropdown-opties voorvoegsel"
 "Price","Prijs"
 "Primary Billing Address","Primair factuuradres"
-"Primary Shipping Address","Primair afleveradres"
+"Primary Shipping Address","Primairleveradres"
 "Problem saving the collection, aborting. Error: %s","Probleem bij opslaan van verzameling. Magento sluit af. Fout: %s"
 "Product","Product"
 "Product ID","Product-ID"
@@ -303,7 +303,7 @@
 "Sent","Verzonden"
 "Session Start Time","Aanvangstijd sessie"
 "Set as Default Billing Address","Als standaard-factuuradres instellen"
-"Set as Default Shipping Address","Als standaard-afleveradres instellen"
+"Set as Default Shipping Address","Als standaard- leveradres instellen"
 "Share Customer Accounts","Klant-accounts delen"
 "Ship to First name","Verzend op voornaam"
 "Ship to Last name","Verzend naar achternaam"
@@ -375,7 +375,7 @@
 "Update customer data","Klantgegevens updaten"
 "Use as My Primary %s Address","Als mijn primaire %s-adres gebruiken"
 "Use as my default billing address","Als mijn standaard-factuuradres gebruiken"
-"Use as my default shipping address","Als mijn standaard-afleveradres"
+"Use as my default shipping address","Als mijn standaard- leveradres"
 "User description","Beschrijving gebruikers"
 "View","Bekijken"
 "View Order","Bestelling bekijken"
@@ -405,7 +405,7 @@
 "You have no additional address entries in your address book.","Je hebt geen extra adressen in je adresboek."
 "You have no additional entries in your address book.","Je hebt geen extra adressen in je adresboek."
 "You have no default billing address in your address book.","Je hebt geen standaard-factuuradres in je adresboek."
-"You have no default shipping address in your address book.","Je hebt geen standaard-afleveradres in je adresboek."
+"You have no default shipping address in your address book.","Je hebt geen standaard- leveradres in je adresboek."
 "You have no primary entries in your address book.","Je hebt geen primaire adressen in je adresboek"
 "You have not set a primary billing address.","Je hebt geen primair factuuradres ingesteld."
 "You have not set a primary shipping address.","Je hebt geen primair verzendadres ingesteld."
