--- a/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
@@ -68,7 +68,7 @@
 "Sale","Verkoop"
 "Sandbox Flag","SandBox Flag"
 "Selected currency code (","Geselecteerde valutacode ("
-"Shipping Address","Afleveradres"
+"Shipping Address","Leveradres"
 "Shipping Information","Verzendgegevens"
 "Shipping Method","Verzendwijze"
 "Sorry, no quotes are available for this order at this time.","Sorry, er zijn momenteel geen offertes beschikbaar voor deze bestelling"
