--- a/KoketSite/app/locale/nl_NL/Mage_PaypalUk.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_PaypalUk.csv
@@ -15,7 +15,7 @@
 "Product Name","Productnaam"
 "Qty","Aantal"
 "Review Order","Bestelling bekijken"
-"Shipping Address","Afleveradres"
+"Shipping Address","Leveradres"
 "Shipping Information","Verzendgegevens"
 "Shipping Method","Verzendwijze"
 "Sorry, no quotes are available for this order at this time.","Sorry, er zijn momenteel geen offertes beschikbaar voor deze bestelling"
