--- a/KoketSite/app/locale/nl_NL/Mage_SalesRule.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_SalesRule.csv
@@ -59,11 +59,11 @@
 "Rule was successfully deleted","Regel is mdg succes verwijderd"
 "Rule was successfully saved","Regel is met succes opgeslagen"
 "Save Rule","Regel opslaan"
-"Shipping Country","Land afleveradres"
+"Shipping Country","Land leveradres"
 "Shipping Method","Verzendwijze"
-"Shipping Postcode","Postcode afleveradres"
-"Shipping Region","Regio afleveradres"
-"Shipping State/Province","Provincie afleveradres"
+"Shipping Postcode","Postcodeleveradres"
+"Shipping Region","Regioleveradres"
+"Shipping State/Province","Provincieleveradres"
 "Shopping Cart Price Rule","Prijsregel winkelmandje"
 "Shopping Cart Price Rules","Winkelmandje prijsregels"
 "Special price","Speciale prijs"
