--- a/KoketSite/app/locale/nl_NL/Mage_Tax.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Tax.csv
@@ -49,6 +49,12 @@
 "Excl. Tax:","Excl. BTW:"
 "Excluding tax","Exclusief BTW"
 "Export Tax Rates","Exporteer BTW-tarieven"
+"Grand Total (Excl. Tax)","Totaal excl. BTW"
+"Grand Total (Excl.Tax)","Totaal excl. BTW"
+"Grand Total (Incl. Tax)","Totaal incl. BTW"
+"Grand Total (Incl.Tax)","Totaal incl. BTW"
+"Grand Total Excl. Tax","Totaal excl. BTW"
+"Grand Total Incl. Tax","Totaal incl. BTW"
 "Ignored when 'Apply Tax After Discount' option is enabled","Genegeerd wanneer 'BTW berekenen na korting' is ingeschakeld"
 "Import / Export Tax Rates","BTW-tarieven in- en exporteren"
 "Import Tax Rates","BTW-groepen importeren"
