--- a/KoketSite/app/locale/nl_NL/Mage_Sales.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Sales.csv
@@ -438,7 +438,7 @@
 "Shipping & Handling:","Verzending"
 "Shipping &amp; Handling","Verzending"
 "Shipping &amp; Handling Information","Gegevens verzending"
-"Shipping Address","Afleveradres"
+"Shipping Address","Leveradres"
 "Shipping Amount","Verzendaantal"
 "Shipping Information","Verzendgegevens"
 "Shipping Method","Verzendwijze"
