create list from all users and create a new pw for them opmaak

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -146,3 +146,11 @@
 "The requested Payment Method is not available.","De gekozen betalingswijze is niet (meer) beschikbaar."
 "Some of the products are currently out of stock.","Sommige artikels zijn momenteel niet in voorraad."
 "The address has been deleted.","Het adres werd gewist."
+"Spend points to purchase order","Gebruikte punten bij aankoop van bestelling"
+"Spend points to purchase order #%s","Gebruikte punten bij aankoop van bestelling %s"
+"Spend points to purchase order %s","Gebruikte punten bij aankoop van bestelling %s"
+"Earn points for purchasing order","Verdiende punten bij aankoop van bestelling"
+"Earn points for purchasing order #%s","Verdiende punten bij aankoop van bestelling %s"
+"Earn points for purchasing order %s","Verdiende punten bij aankoop van bestelling %s"
+"Refund Points Earn","Teruggave verdiende punten"
+"N/A","n.v.t."
