--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -154,3 +154,4 @@
 "Earn points for purchasing order %s","Verdiende punten bij aankoop van bestelling %s"
 "Refund Points Earn","Teruggave verdiende punten"
 "N/A","n.v.t."
+"Some of the products cannot be ordered in requested quantity.","Enkele artikelen kunnen niet besteld worden in de gevraagde hoeveelheid."
