--- a/KoketSite/locale/nl_NL/Mage_CatalogInventory.csv
+++ b/KoketSite/locale/nl_NL/Mage_CatalogInventory.csv
@@ -30,8 +30,8 @@
 "Stock Options","Voorraaad-opties"
 "Stock item for Product in option is not valid","Voorraadartikel voor gekozen product is niet geldig"
 "Stock item for Product is not valid","Voorraadartikel voor product is niet geldig"
-"The maximum quantity allowed for purchase is %s.","Het maximale aankoop-aantal is %s."
-"The minimum quantity allowed for purchase is %s.","Het minimale aankoop-aantal is %s."
+"The maximum quantity allowed for purchase is %s.","Het maximale aankoopaantal is %s."
+"The minimum quantity allowed for purchase is %s.","Het minimale aankoopaantal is %s."
 "The requested quantity for ""%s"" is not available.","Het gewenste aantal voor “%s” is niet beschikbaar."
 "The requested quantity is not available.","Het gewenste aantal is niet beschikbaar."
 "This product is currently out of stock.","Dit product is momenteel niet in voorraad"
