--- a/KoketSite/app/locale/nl_NL/Mage_ProductAlert.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_ProductAlert.csv
@@ -19,7 +19,7 @@
 "Product price alert","Prijsmelding"
 "Product stock alert","Voorraadmelding"
 "Sign up for price alert","Opgeven voor prijsmeldingen"
-"Sign up to get notified when this product is back in stock","Opgeven voor een melding wanneer dit product weer in voorraad is"
+"Sign up to get notified when this product is back in stock","Mail me wanneer dit product weer in voorraad is"
 "Special price:","Speciale prijs"
 "Start Time","Starttijd"
 "Stock alert Email Template","Template e-mail met voorraadmelding"
