- staaltjes voor stoffen: er wordt knop "gratis staaltje" getoond bij product details, en als je er op klikt, wordt er on the fly een nieuw product (staaltje) aangemaakt. - print receipt: aanpassing: alles via https laten gaan  zoniet werkt het niet meer

--- a/KoketSite/app/locale/nl_NL/Mage_CatalogSearch.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_CatalogSearch.csv
@@ -39,6 +39,6 @@
 "Subscribe to Feed","Abonneren op Feed"
 "There are no search terms available.","Er zijn momenteel geen populaire trefwoorden beschikbaar."
 "Yes","Ja"
-"You have to specify at least one search term","U moet tenminste &eacute;&eacute;n zoekterm opgeven"
-"Your search returns no results.","Uw zoekactie had geen resultaat"
+"You have to specify at least one search term","Je moet tenminste &eacute;&eacute;n zoekterm opgeven"
+"Your search returns no results.","Je zoekactie had geen resultaat"
 "up to %s","tot %s"
