--- a/KoketSite/app/locale/nl_NL/Magestore_RewardPointsRule.csv
+++ b/KoketSite/app/locale/nl_NL/Magestore_RewardPointsRule.csv
@@ -49,7 +49,7 @@
 "Discount for every X points","Discount for every X points"
 "Discount received for every X points in tab Conditions","Discount received for every X points in tab Conditions"
 "Earning","Earning"
-"Earning %s for this item","Earning %s for this item"
+"Earning %s for this item","Je verdient %s met dit artikel."
 "Earning Point Action","Earning Point Action"
 "Earning Points Product","Earning Points Product"
 "Earning Rates","Earning Rates"
