sample (staaltje) + vertalingen

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -157,3 +157,4 @@
 "Some of the products cannot be ordered in requested quantity.","Enkele artikelen kunnen niet besteld worden in de gevraagde hoeveelheid."
 "Alert subscription has been saved.","We sturen je een mail zodra het product terug in voorraad is."
 "Sign up to get notified when this product is back in stock","Mail me wanneer dit product terug in voorraad is"
+"and above","en hoger"
