--- a/KoketSite/locale/nl_NL/Mage_Catalog.csv
+++ b/KoketSite/locale/nl_NL/Mage_Catalog.csv
@@ -514,6 +514,7 @@
 "Text","Tekst"
 "Text Area","Tekstvak"
 "Text Field","Tekstveld"
+"The comparison list was cleared.","Het vergelijkingslijstje werd leeg gemaakt."
 "There are no %s available.","Er is geen %s beschikbaar."
 "There are no customers for this alert","Er zijn geen klanten voor deze waarschuwing"
 "There are no products matching the selection.","Er komen geen producten overeen met de selectie."
@@ -594,7 +595,7 @@
 "Zoom Out","Uitzoomen"
 "[GLOBAL]","[GLOBAAL]"
 "and","en"
-"and above","en hoger"
+"%s and above","%s en meer"
 "cache refresh needed","Cache moet ververst worden"
 "categories","Categorie&euml;n"
 "comma separated","komma-gescheiden"
