script to import newsletter subscribers

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -166,3 +166,21 @@
 "Bitcoin","Bitcoin"
 "PayPal","PayPal"
 "here","hier"
+"Add gift options.","GRATIS cadeauverpakking!"
+"Gift Options for the Entire Order.",""
+"Gift Options for Individual Items",""
+"Add gift options for the Entire Order","Verpak mijn hele bestelling als één kadootje"
+"Add gift options for Individual Items","Verpak individuele producten als aparte kadootjes"
+"You can leave this box blank if you do not wish to add a gift message for whole order.",""
+"You can leave this box blank if you do not wish to add a gift message for the item.",""
+"Last Ordered Items","Laatst gekochte producten"
+"Order Comment","Bericht aan Kokette Katinka (optioneel):"
+"Please specify a shipping method.","Gelieve een verzendwijze te kiezen."
+"Please check shipping address information.","Gelieve het verzendadres na te kijken."
+"Please enter the city.","Gelieve een plaatsnaam in te vullen."
+"Please enter the first name.","Gelieve een voornaam in te vullen."
+"Please enter the last name.","Gelieve en familienaam in te vullen."
+"Please enter the street.","Gelieve een straatnaam in te vullen."
+"Please enter the telephone number.","Gelieve een telefoonnummer in te vullen."
+"Please specify payment method.","Gelieve een betaalwijze te kiezen."
+"Please specify shipping method.","Gelieve een verzendwijze te kiezen."
