--- a/KoketSite/app/locale/nl_NL/IWD_Opc.csv
+++ b/KoketSite/app/locale/nl_NL/IWD_Opc.csv
@@ -124,7 +124,7 @@
 "Forgot your password?","Ben je je wachtwoord vergeten?"
 "Get a Quote","Verkrijg een prijsopgave"
 "Get list of available payment methods","Lijst van beschikbare betalingsmethoden verkrijgen"
-"Get list of available shipping methods","Lijst van beschikbare verzendingsmethoden verkrijgen"
+"Get list of available shipping methods","Lijst van beschikbare verzendwijzes verkrijgen"
 "Get list of products in shopping cart","Lijst van producten in winkelmandje verkrijgen"
 "Get terms and conditions","Voorwaarden verkrijgen"
 "Get total prices for shopping cart","Totale prijs voor winkelmandje verkrijgen"
@@ -212,9 +212,9 @@
 "Please select shipping address for applicable items","Gelieve een verzendadres selecteren voor de toepasselijke artikelen"
 "Please select shipping methods for all addresses","Gelieve verzendwijzen selecteren voor alle adressen"
 "Please select valid payment method.","Gelieve een geldige betalingsmethode te kiezen."
-"Please specify payment method.","Geef wijze van betaling aan"
-"Please specify shipping method.","Gelieve een verzendingsmethode te specificeren."
-"Please specify shipping methods for all addresses.","Gelieve verzendingsmethodes voor alle adressen te selecteren."
+"Please specify payment method.","Geef je betaalwijze aan."
+"Please specify shipping method.","Gelieve een verzendwijze te kiezen."
+"Please specify shipping methods for all addresses.","Gelieve de verzendwijze voor alle adressen te selecteren."
 "Price","prijs"
 "Proceed to Checkout","Doorgaan naar Kassa"
 "Product","product"
@@ -247,7 +247,7 @@
 "See price before order confirmation.","Zie prijs voor bevestiging van bestelling."
 "Select Address","Kies Adres"
 "Select Addresses","Selecteer Adressen"
-"Select Shipping Method","Kies Verzendingsmethode"
+"Select Shipping Method","Kies verzendwijze"
 "Select State/Province...","Selecteer Staat/Provincie..."
 "Select a billing address from your address book or enter a new address.","Selecteer een factuuradres uit je adresboek of voer een nieuw adres in."
 "Select a shipping address from your address book or enter a new address.","Selecteer een verzendadres vanuit je adresboek of geef een nieuw e-mailadres in"
@@ -258,7 +258,7 @@
 "Set customer for shopping cart","Klant instellen voor winkelmandje"
 "Set customer's addresses in shopping cart","Stel adres van klant in winkelmandje in"
 "Set payment method","Stel betalingsmethode in"
-"Set shipping method","Stel verzendingsmethode in"
+"Set shipping method","Stel verzendwijze in"
 "Ship to Multiple Addresses","Stuur naar Meerdere Adressen"
 "Ship to different address","Verzend naar ander adres"
 "Ship to this address","Verzend naar dit adres"
@@ -269,7 +269,7 @@
 "Shipping To","Verzenden naar"
 "Shipping information","Verzendingsinformatie"
 "Shipping method has not been selected yet","Verzendwijze is nog niet geselecteerd"
-"Shipping methods in shopping cart","Verzendingsmethoden in winkelmandje"
+"Shipping methods in shopping cart","Verzendwijzes in winkelmandje"
 "Shipping selection is not applicable.","Verzenden selectie is niet toepasbaar."
 "Shopping Cart","Winkelmandje"
 "Shopping Cart Form Before","Winkelmandje Formulier Voor"
