--- a/KoketSite/app/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Customer.csv
@@ -32,7 +32,7 @@
 "Back to Login","Terug naar log-in venster"
 "Bad request.","Foute aanvraag"
 "Bill to Name","Stuur rekening op naam"
-"Billing Information","Betaalgegevens"
+"Billing Information","Factuuradres"
 "Bought From","Gekocht van"
 "By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.","Wanneer je een account aanmaakt, verloopt het bestelproces sneller, verzamel je kortingspunten voor je volgende aankoop en kun je gebruik maken van extra opties zoals het opvolgen van je bestelling, het opslaan van meerdere adressen, enzovoort."
 "CSV","CSV"
@@ -310,7 +310,7 @@
 "Shipped to First Name","Verzonden aan voornaam"
 "Shipped to Last Name","Verzonden aan achternaam"
 "Shipped to Name","Verzonden aan naam"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Shopping Cart","Winkelmandje"
 "Shopping Cart - %d item(s)","Winkelmandje - %d artikel(en)"
