--- a/KoketSite/app/locale/nl_NL/Mage_GiftMessage.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_GiftMessage.csv
@@ -8,7 +8,7 @@
 "Check this checkbox if you want to add gift messages to your items.","Vink deze checkbox aan als u een cadeauberichten wilt toevoegen aan uw artikelen"
 "Check this checkbox if you want to add gift messages.","Vink deze checkbox aan als u cadeauberichten wilt toevoegen"
 "Close","Sluiten"
-"Do you have any gift items in your order?","Zitten er cadeaus bij uw bestelling?"
+"Do you have any gift items in your order?","Kadootje?"
 "Edit","Wijzigen"
 "Edit Gift Message","Cadeaubericht bewerken"
 "Enter a gift message for each item in your order.","Voer een cadeaubericht in voor elk artikel in uw bestelling."
@@ -20,7 +20,7 @@
 "Gift Messages","Cadeau-berichten"
 "Gift message has been successfully saved","Cadeaubericht is opgeslagen"
 "Item %d of %d","Artikel %d van %d"
-"Message","Bericht"
+"Message","Je persoonlijke boodschap:<br/><i>Dit bericht wordt als kaartje aan het cadeau toegevoegd. Laat het bericht leeg als je geen kaartje wil toevoegen.</i>"
 "No","Nee"
 "Remove","Verwijderen"
 "Save","Opslaan"
