--- a/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Paypal.csv
@@ -5,7 +5,7 @@
 "Amex","Amex"
 "Authorization","Authorisatie"
 "Authorize and Capture","Authoriseer en Capture"
-"Billing Information","Betaalgegevens"
+"Billing Information","Factuuradres"
 "Business Account","Bedrijfsaccount"
 "Business Name","Bedrijfsnaam"
 "Card Verification Number","Kaart-verificatienummer"
@@ -69,7 +69,7 @@
 "Sandbox Flag","SandBox Flag"
 "Selected currency code (","Geselecteerde valutacode ("
 "Shipping Address","Leveradres"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Sorry, no quotes are available for this order at this time.","Sorry, er zijn momenteel geen offertes beschikbaar voor deze bestelling"
 "Sort order","Sorteer volgorde"
