--- a/KoketSite/app/locale/nl_NL/Mollie_Mpm.csv
+++ b/KoketSite/app/locale/nl_NL/Mollie_Mpm.csv
@@ -65,7 +65,7 @@
 "Note: version information is accurate only when the cache is cleared.","Let op: versie informatie is alleen accuraat wanneer de cache is geleegd."
 "iDEAL","iDEAL"
 "Mister Cash","Mister Cash"
-"Creditcard","Creditcard"
+"Creditcard","Creditcard (Visa, Master Card)"
 "Bank transfer","Overboeking"
 "PayPal","PayPal"
 "paysafecard","paysafecard"
