--- a/KoketSite/locale/nl_NL/Mage_Adminhtml.csv
+++ b/KoketSite/locale/nl_NL/Mage_Adminhtml.csv
@@ -796,7 +796,7 @@
 "Store View","Winkelzicht"
 "Store:","Winkel:"
 "Subject","Onderwerp"
-"Submit","Verstuur"
+"Submit","Registreren"
 "Subpackage","Subpakket"
 "Subpackage can't be conflicting","Subpakket mag niet conflicteren"
 "Subpackages","Subpakketten"
