--- a/KoketSite/locale/nl_NL/Mage_Customer.csv
+++ b/KoketSite/locale/nl_NL/Mage_Customer.csv
@@ -310,7 +310,7 @@
 "Shipped to First Name","Verzonden aan voornaam"
 "Shipped to Last Name","Verzonden aan achternaam"
 "Shipped to Name","Verzonden aan naam"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Shopping Cart","Winkelmandje"
 "Shopping Cart - %d item(s)","Winkelmandje - %d artikel(en)"
@@ -330,7 +330,7 @@
 "Street Address","Adres"
 "Street Address","Adres 2"
 "Subject","Onderwerp"
-"Submit","Verstuur"
+"Submit","Registreren"
 "Subscribe","Inschrijven"
 "Subscribe to newsletter","Abonneer op nieuwsbrief"
 "Subscribed to Newsletter?","Geabonneerd op nieuwsbrief?"
