--- a/KoketSite/locale/nl_NL/Mage_GiftMessage.csv
+++ b/KoketSite/locale/nl_NL/Mage_GiftMessage.csv
@@ -8,7 +8,7 @@
 "Check this checkbox if you want to add gift messages to your items.","Vink deze checkbox aan als u een cadeauberichten wilt toevoegen aan uw artikelen"
 "Check this checkbox if you want to add gift messages.","Vink deze checkbox aan als u cadeauberichten wilt toevoegen"
 "Close","Sluiten"
-"Do you have any gift items in your order?","Zitten er cadeaus bij uw bestelling?"
+"Do you have any gift items in your order?","Kadootje?"
 "Edit","Wijzigen"
 "Edit Gift Message","Cadeaubericht bewerken"
 "Enter a gift message for each item in your order.","Voer een cadeaubericht in voor elk artikel in uw bestelling."
