--- a/KoketSite/locale/nl_NL/Mage_Sales.csv
+++ b/KoketSite/locale/nl_NL/Mage_Sales.csv
@@ -313,7 +313,7 @@
 "Paid Amount","Betaald bedrag"
 "Partial","Gedeeltelijk"
 "Payment Failed","Betaling mislukt"
-"Payment Information","Betalingsgegevens"
+"Payment Information","Betaalwijze"
 "Payment Method","Betaalwijze"
 "Payment Method:","Betaalwijze:"
 "Pending","Wachtende"
@@ -440,7 +440,7 @@
 "Shipping &amp; Handling Information","Gegevens verzending"
 "Shipping Address","Leveradres"
 "Shipping Amount","Verzendaantal"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres  "
 "Shipping Method","Verzendwijze"
 "Shipping Method:","Verzendwijze"
 "Shipping Refund","Terugbetaling van verzending"
