--- a/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Checkout.csv
@@ -20,8 +20,8 @@
 "Back to Shipping Information","Terug naarleveradres"
 "Based on your selection, you may be interested in the following items:","Gebaseerd op je selectie, ben je wellicht ook geïnteresseerd in de volgende producten:"
 "Billing Address","Factuuradres"
-"Billing Information","Betaalgegevens"
-"Billing Information - %s","Betaalgegevens - %s"
+"Billing Information","Factuuradres"
+"Billing Information - %s","Factuuradres - %s"
 "Can not add item to shopping cart","Kan artikel niet toevoegen aan winkelmandje"
 "Can not apply coupon code.","Kan kortingscode niet toepassen."
 "Can't open overview page","Kan overzicht niet openen"
@@ -124,7 +124,7 @@
 "New Address","Nieuw adres"
 "New Condition","Nieuwe voorwaarde"
 "Order #","Bestelnummer"
-"Order Review","Controleer uw bestelling"
+"Order Review","Controle"
 "Order Success","Bestelling succes"
 "Other items in your order","Andere artikelen van je bestelling"
 "Password","Wachtwoord"
@@ -132,7 +132,7 @@
 "Payment Failed Email Sender","Afzender E-mail over mislukte betaling"
 "Payment Failed Emails","E-mails over mislukte betaling"
 "Payment Failed Template","Template mislukte betaling"
-"Payment Information","Betalingsgegevens"
+"Payment Information","Betaalwijze"
 "Payment Method","Betaalwijze"
 "Payment method is not defined","Betaalwijze is niet gedefinieerd"
 "Place Order","Plaats bestelling"
@@ -170,7 +170,7 @@
 "Select Shipping Method","Verzendwijze selecteren"
 "Select State/Province...","Provincie selecteren"
 "Select a billing address from your address book or enter a new address.","Selecteer een factuuradres uit je adresboek of voer een nieuw adres in."
-"Select a shipping address from your address book or enter a new address.","Selecteer eenleveradres uit je adresboek of voer een nieuw adres in."
+"Select a shipping address from your address book or enter a new address.","Selecteer een leveradres uit je adresboek of voer een nieuw adres in."
 "Send Payment Failed Email Copy Method","CC-methode van E-mail over mislukte betaling"
 "Send Payment Failed Email Copy To","Van een E-mail over mislukte betaling een CC sturen aan"
 "Send to","Verzend naar"
@@ -178,7 +178,7 @@
 "Ship to different address","Naar ander adres verzenden"
 "Ship to this address","Naar dit adres verzenden"
 "Shipping Address","Leveradres"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Shipping Methods","Verzendwijzen"
 "Shipping method has not been selected yet","Verzendwijze is nog niet geselecteerd"
