--- a/KoketSite/locale/nl_NL/Mage_Paypal.csv
+++ b/KoketSite/locale/nl_NL/Mage_Paypal.csv
@@ -69,7 +69,7 @@
 "Sandbox Flag","SandBox Flag"
 "Selected currency code (","Geselecteerde valutacode ("
 "Shipping Address","Leveradres"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Sorry, no quotes are available for this order at this time.","Sorry, er zijn momenteel geen offertes beschikbaar voor deze bestelling"
 "Sort order","Sorteer volgorde"
