--- a/KoketSite/locale/nl_NL/Mage_PaypalUk.csv
+++ b/KoketSite/locale/nl_NL/Mage_PaypalUk.csv
@@ -16,7 +16,7 @@
 "Qty","Aantal"
 "Review Order","Bestelling bekijken"
 "Shipping Address","Leveradres"
-"Shipping Information","Verzendgegevens"
+"Shipping Information","Leveradres"
 "Shipping Method","Verzendwijze"
 "Sorry, no quotes are available for this order at this time.","Sorry, er zijn momenteel geen offertes beschikbaar voor deze bestelling"
 "Submitting order information...","Bezig met verzenden van bestelgegevens"
