--- a/KoketSite/locale/nl_NL/Magestore_RewardPoints.csv
+++ b/KoketSite/locale/nl_NL/Magestore_RewardPoints.csv
@@ -269,4 +269,4 @@
 "the equivalent value of points","the equivalent value of points"
 "to learn about it.","voor meer details."
 "You own","Je verzamelde reeds"
-"Go to your cart if you want to edit your order.","Ga naar je mandje om wijzigingen uit te voeren."
+"Go to your cart if you want to edit your order.","Ga naar <a href='/checkout/cart/'>je mandje</a> om wijzigingen uit te voeren."
