twitter, translations, birthday, ..

--- a/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
+++ b/KoketSite/app/design/frontend/shopper/koket/locale/nl_NL/translate.csv
@@ -39,6 +39,7 @@
 "View as","Bekijk"
 "Price","Prijs"
 "Price Slider","Prijsschuiver"
+"Price:","Prijs:"
 "prev","Vorige"
 "next","Volgende"
 "Qty","Hoeveelheid"
@@ -101,7 +102,7 @@
 "Close","Sluiten"
 "Your order has been received","We hebben je bestelling goed ontvangen."
 "What's this","Wat is dit?"
-"Recently added item(s)","Recent toegevoegde artikels"
+"Recently added item(s)","Recent toegevoegde artikelen"
 "Cart Subtotal:","Subtotaal mandje:"
 "You have no items in your shopping cart.","Je mandje bevat geen artikelen."
 "You are now logged out","Je bent nu uitgelogd"
@@ -120,7 +121,7 @@
 "Address Book","Adresboek"
 "Maximize my discount with points","Gebruik al mijn kortingspunten."
 "Discount Codes","Cadeaucheque & kortingscode"
-"Enter your coupon code if you have one.","Voer je kortingscode in als je die hebt."
+"Enter your coupon code if you have one.","Voer je kortingscode in als je die hebt. (<a href='/faq#cadeaucheques'>Meer info</a>)"
 "Apply Coupon","Kortingscode gebruiken"
 "Cancel Coupon", "Kortingscode annuleren"
 "Apply","Invoeren"
@@ -144,9 +145,10 @@
 "Cancel","Annuleer"
 "Items %s to %s of %s total","Artikelen %s tot %s van de %s"
 "The requested Payment Method is not available.","De gekozen betalingswijze is niet (meer) beschikbaar."
-"Some of the products are currently out of stock.","Sommige artikels zijn momenteel niet in voorraad."
+"Some of the products are currently out of stock.","Sommige artikelen zijn momenteel niet in voorraad."
 "The address has been deleted.","Het adres werd gewist."
 "Spend points to purchase order","Gebruikte punten bij aankoop van bestelling"
+"Retrieve points spent on cancelled order","Teruggave punten van geannuleerde bestelling"
 "Spend points to purchase order #%s","Gebruikte punten bij aankoop van bestelling %s"
 "Spend points to purchase order %s","Gebruikte punten bij aankoop van bestelling %s"
 "Earn points for purchasing order","Verdiende punten bij aankoop van bestelling"
@@ -184,3 +186,7 @@
 "Please enter the telephone number.","Gelieve een telefoonnummer in te vullen."
 "Please specify payment method.","Gelieve een betaalwijze te kiezen."
 "Please specify shipping method.","Gelieve een verzendwijze te kiezen."
+"You are receiving this notification because you subscribed to receive alerts when the following products are back in stock:","Je ontvangt dit bericht omdat je ons vroeg om een mail te sturen wanneer de volgende producten weer in voorraad zijn:"
+"Click here not to receive alerts for this product","Ik wens geen meldingen meer te ontvangen voor dit artikel."
+"Unsubscribe from all price alerts","Ik wens alle prijsmeldingen stop te zetten."
+"Receive point(s) for birthday","Je verjaardagspunten"
