--- a/KoketSite/app/locale/nl_NL/Mage_Bundle.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Bundle.csv
@@ -1,7 +1,7 @@
 "--Select--","--Kies--"
 "Add New Option","Nieuwe optie toevoegen"
 "Add Selection","Selectie toevoegen"
-"As low as","Slechts"
+"As low as","Korting tot"
 "Bundle Items","Bundel-artikelen"
 "Bundle Product","Bundelproduct"
 "Buy %1$s with %2$s discount each","Bestel %1$s met %2$s korting"
