--- a/KoketSite/app/locale/nl_NL/Mage_Catalog.csv
+++ b/KoketSite/app/locale/nl_NL/Mage_Catalog.csv
@@ -45,7 +45,7 @@
 "Are you sure you would like to remove all products from your comparison?","Weet u zeker dat u alle producten uit uw vergelijking wilt verwijderen?"
 "Are you sure you would like to remove this item from the compare products?","Weet u zeker dat u dit artikel wilt verwijderen van vergelijklijst?"
 "Are you sure?","Weet u het zeker?"
-"As low as:","Slechts"
+"As low as:","Korting tot"
 "Assign","Toewijzen"
 "Assign product link","Productlink toewijzen"
 "Assign product to category","Product aan categorie toewijzen"
@@ -82,7 +82,7 @@
 "Browse By","Blader door"
 "Buy %1$s for %2$s","Bestel %1 voor %2$s"
 "Buy %1$s for %2$s (%3$s incl. tax) each","Koop %1$s voor %2$s (%3$s incl. BTW) per stuk."
-"Buy %1$s for %2$s each","Koop %1$s voor %2$s per stuk."
+"Buy %1$s for %2$s each","Koop %1$s meter aan %2$s per meter"
 "Can be used only with catalog input type Dropdown","Kan alleen gebruikt worden met invoerveld van type Dropdown"
 "Can be used only with catalog input type Dropdown, Multiple Select and Price","Kan alleen gebruikt worden met invoervelden van typen Dropdown, Multiple select en Prijs"
 "Can't create image.","Kan geen afbeelding maken"
@@ -588,7 +588,7 @@
 "You cannot edit this attribute","U kunt dit attribuut niet bewerken"
 "You cannot remove system attribute from this set.","U kunt dit systeem-attribuut niet verwijderen uit deze set."
 "You cannot update this attribute","U kunt dit attribuut niet updaten"
-"You have no items to compare.","Twijfel je tussen enkele artikels? Vergelijk ze door bij het artikel op 'Vergelijk' te drukken. Daarna kan je ze hier netjes naast elkaar vergelijken."
+"You have no items to compare.","Twijfel je tussen enkele artikelen? Vergelijk ze door bij het artikel op 'Vergelijk' te drukken. Daarna kan je ze hier netjes naast elkaar vergelijken."
 "You may also be interested in the following product(s)","U bent wellicht ook ge&iuml;nteresseerd in de volgende producten:"
 "Zoom In","Inzoomen"
 "Zoom Out","Uitzoomen"
