--- a/KoketSite/locale/nl_NL/Mage_Catalog.csv
+++ b/KoketSite/locale/nl_NL/Mage_Catalog.csv
@@ -589,7 +589,7 @@
 "You cannot edit this attribute","U kunt dit attribuut niet bewerken"
 "You cannot remove system attribute from this set.","U kunt dit systeem-attribuut niet verwijderen uit deze set."
 "You cannot update this attribute","U kunt dit attribuut niet updaten"
-"You have no items to compare.","Twijfel je tussen enkele artikels? Vergelijk ze door bij het artikel op 'Vergelijk' te drukken. Daarna kan je ze hier netjes naast elkaar vergelijken."
+"You have no items to compare.","Twijfel je tussen enkele artikelen? Vergelijk ze door bij het artikel op 'Vergelijk' te drukken. Daarna kan je ze hier netjes naast elkaar vergelijken."
 "You may also be interested in the following product(s)","U bent wellicht ook ge&iuml;nteresseerd in de volgende producten:"
 "Zoom In","Inzoomen"
 "Zoom Out","Uitzoomen"
